2004-07-21  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkclipboard.xml (set_with_data) Add description of get_func
	and clear_func signatures.

2004-07-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeviewcolumn.xml (set_sort_column_id) Expand description
	of this convenience method.
	(set_sort_indicator) Add note re effect of set_sort_column_id() on
	use of this method.

2004-07-19  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreesortable.xml (set_sort_func) Add description of
	comaprison function return value. Thanks to Andrew Boie.

	* pygtk-gtktreeview.xml (get_path_at_pos) Return value if no path
	is None.

2004-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_actions)
	(add_toggle_actions) (add_radio_actions) Document new user_data
	param.

2004-07-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbutton.xml Add description of optional use_underline
	param added in PyGTK 2.4
	* pygtk-gtktogglebutton.xml Add description of optional use_underline
	param added in PyGTK 2.4. Add missing constructor param description.
	* pygtk-gtkcheckbutton.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkradiobutton.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkcheckmenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkmenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkradiomenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.

2004-07-12  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml (set_geometry_hints) Add missing param names.
	Thanks to Theo Reed in #147458.

2004-07-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbin.xml ("child") Add description of this attribute.

	* pygtk-gtkcheckmenuitem ("active") Add description of this attribute.
	("indicator-size") Add description of this style property.
