@@ -88,6 +88,17 @@ linkend="function-gtk--accel-groups-from-object">gtk.accel_groups_from_object</l
     </refsect2>
 
     <refsect2>
+      <title><link linkend="class-gtkclipboard"><classname>gtk.Clipboard</classname></link> Functions</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname><link
+linkend="function-gtk--clipboard-get">gtk.clipboard_get</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+
+    </refsect2>
+
+    <refsect2>
       <title><link linkend="class-gtkcolorselection"><classname>gtk.ColorSelection</classname></link> Functions</title>
 
       <programlisting><methodsynopsis language="python">
