@@ -1,5 +1,12 @@
 2004-07-21  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkclipboard.xml (gtk.Clipboard) Add description of defaults
+	for optional params.
+	(gtk.clipboard_get) Add description of this PyGTK 2.4 function.
+
+	* pygtk-gtk-functions.xml
+	(gtk.clipboard_get) Add link for this PyGTK 2.4 function.
+
 	* pygtk-gtkclipboard.xml (set_with_data) Add description of get_func
 	and clear_func signatures.
 
